[package]
name = "http-protocol"
version = "0.2.16"
authors = ["WatchDG <baranov@w3m.co>"]
license = "MIT OR Apache-2.0"
description = "http protocol"
homepage = "https://github.com/WatchDG/rust-http-protocol"
documentation = "https://docs.rs/http-protocol"
repository = "https://github.com/WatchDG/rust-http-protocol"
readme = "README.md"
edition = "2018"
exclude = [
    ".github/**/*",
    "src/main.rs",
    ".gitignore"
]

[dependencies]
lazy_static = "1.4.0"
bytes = "1.0.1"

#[dev-dependencies]
tokio = { version = "1.5", features = ["full"] }